--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,6 +7,12 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
+	"last_search.DE949528" = "sky"
+	"OpenInspectorPreview.DE949528" = "0"
+	"currentGroup.DE949528" = "all"
+	"last_search.EAB0C2BA" = "arrow 2d"
+	"OpenInspectorPreview.EAB0C2BA" = "0"
+	"currentGroup.EAB0C2BA" = "all"
 }
 providers = {
 	adb = {
@@ -53,6 +59,11 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"arr 2d"
+	"d2d"
+	"f 2d"
+	"p"
+	"m"
 ]
 searchItemFavorites = [
 ]
